# ai-engineer

./: .gitignore  README.md  other.md
Docker/Docker_Service_Face/ai-projects/camera-ai-service/: .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  ecosystem.config.js  entrypoint.sh  main.py  poetry.toml  pyproject.toml  save_file.py
Docker/Docker_Service_Face/ai-projects/camera-ai-service/app/: main.py
Docker/Docker_Service_Face/ai-projects/camera-ai-service/app/api/: main.py
Docker/Docker_Service_Face/ai-projects/camera-ai-service/app/common/: check_sync_multi_camera.py  convert_image.py  enum.py  image_face.py  send_request_camera_dahua.py  utils.py  vehicle_mapping.json
Docker/Docker_Service_Face/ai-projects/camera-ai-service/app/core/: config.py
Docker/Docker_Service_Face/ai-projects/camera-ai-service/app/models/: __init__.py  base_model.py  person_camera_model.py  person_image.py  person_model.py
Docker/Docker_Service_Face/ai-projects/camera-ai-service/app/rpc_server/: message_handler.py  message_listener.py  mq_service.py
Docker/Docker_Service_Face/ai-projects/camera-ai-service/app/schemas/: base_face_camera_dahua.py  face_group_dahua_schema.py  hik_camera_schema.py  person_access_control_schemas.py  person_camera_schemas.py  person_dahua_schema.py  person_hik_schemas.py  person_image_schemas.py  person_schemas.py  process_schemas.py
Docker/Docker_Service_Face/ai-projects/camera-ai-service/app/services/: base_services.py  dahua_find_media_services.py  face_group_dahua_service.py  minio_services.py  person_access_control_services.py  person_camera_services.py  person_dahua_service.py  person_hik_service.py  person_image_service.py  rpc_server.py  (+3 more)
Docker/Docker_Service_Face/ai-projects/camera-ai-service/old_code/: ApiUtil.py  access_control.py  dahua_access_control_thread.py  dahua_camera.py  dahua_event_thread.py  dahua_snap_services.py  hik_person_routes.py  kbvision_plate_detection.py  paho_client.py  person_dahua.py  subcribeSnap.py  t.py  tool.py
Docker/Docker_Service_Face/ai-projects/camera-ai-service/sample_response/: test_parse_event.py
Docker/Docker_Service_Face/ai-projects/oryza-ai/: .env.example  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  desktop.desktop  docker-compose.yml  ecosystem.config.js  entrypoint.sh  main.py  pyproject.toml
Docker/Docker_Service_Face/ai-projects/oryza-ai/app/: main.py
Docker/Docker_Service_Face/ai-projects/oryza-ai/old_code/: t.py
(+1109 files in other folders)
